--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ input[type="checkbox"] {
 }
 
 
-#plan-hoy, #plan-dia {
+#plan-hoy, #plan-dia, #progreso {
   background-color: #111;
   /* fondo oscuro */
   padding: 20px;
@@ -229,7 +229,29 @@ input[type="checkbox"] {
 
 #plan-hoy button:hover, #plan-dia button:hover {
   opacity: 0.9;
-
 }
 
+#progreso {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+}
 
+.lottie-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.lottie-container {
+  width: 100px;
+  height: 100px;
+}
+
+.lottie-label {
+  margin-top: 8px;
+  font-size: 14px;
+  color: #e7b40b;
+  text-align: center;
+}
