--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ input[type="checkbox"] {
 }
 
 
-#plan-hoy, #plan-dia, #progreso {
+#plan-hoy, #plan-dia, #progreso, #progreso-semanal {
   background-color: #111;
   /* fondo oscuro */
   padding: 20px;
@@ -195,14 +195,14 @@ input[type="checkbox"] {
   margin: 20px auto;
 }
 
-#plan-hoy h2, #plan-dia h2 {
+#plan-hoy h2, #plan-dia h2, #progreso-semanal {
   margin-bottom: 20px;
   text-align: left;
   font-family: 'Arial', sans-serif;
   /* o la fuente que prefieras */
 }
 
-#plan-hoy div, #plan-dia div {
+#plan-hoy div, #plan-dia, #progreso-semanal div {
   margin-bottom: 20px;
   /* espacio entre comidas y ejercicios */
   color: #fff;
