--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,8 @@ td input[type="text"]:focus {
   background-color: #2a2a2a;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="number"]{
   width: 90%;
   padding: 6px 10px;
   border: 1px solid #444;
@@ -123,8 +124,18 @@ input[type="text"] {
   color: #fff;
   transition: 0.3s;
 }
+input[type="number"]{
+  width: 10%;
+}
 
-input[type="text"]:focus {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus {
   border-color: #ff9800;
   box-shadow: 0 0 5px #ff9800aa;
 }
